Improve readability of Java 25 modernization changes