@@ -17,11 +17,11 @@ public final class RuleValidator {
    * @return an OptionalInt containing the rule if valid, or an empty OptionalInt if invalid
    */
   public static OptionalInt parseRule(String text) {
-    if (text == null || text.trim().isEmpty()) {
+    if (text == null || text.isBlank()) {
       return OptionalInt.empty();
     }
     try {
-      int rule = Integer.parseInt(text.trim());
+      var rule = Integer.parseInt(text.trim());
       if (rule >= 0 && rule <= 255) {
         return OptionalInt.of(rule);
       }
